[tool.poetry]
name = "sample-finder"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
requests = "^2.32.3"
types-pyyaml = "^6.0.12.20240311"
types-requests = "^2.32.0.20240712"
pyzipper = "^0.3.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
yamllint = "^1.35.1"
mypy = "^1.10.1"

[tool.poetry.scripts]
sample-finder = 'sample_finder.app:app'

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "D104",
    "D203",
    "D212",
    "ISC001",
]

[tool.mypy]
namespace_packages = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
